tests/cases/ok/module_qualified_calls_main.p4
import module_qualified_calls_helpers

def main() -> None:
    print(module_qualified_calls_helpers.twice(4))
    print(module_qualified_calls_helpers.twice(1.5))
