tests/cases/fail/non_bool_while_condition.p4
def main() -> None:
    while 1:
        print(1)
